:bug: fix posts responsive on mobiles

--- a/assets/styles/helpers/_mixins.scss
+++ b/assets/styles/helpers/_mixins.scss
@@ -2,23 +2,19 @@
 
 @mixin for-size($size) {
   @if $size == phone-only {
-    @media (max-width: 599px) {
+    @media (max-width: 768px) {
       @content;
     }
   } @else if $size == tablet-portrait-up {
-    @media (min-width: 600px) {
-      @content;
-    }
-  } @else if $size == tablet-landscape-up {
-    @media (min-width: 900px) {
+    @media (min-width: 769px) {
       @content;
     }
   } @else if $size == desktop-up {
-    @media (min-width: 1200px) {
+    @media (min-width: 1024px) {
       @content;
     }
   } @else if $size == big-desktop-up {
-    @media (min-width: 1800px) {
+    @media (min-width: 1216px) {
       @content;
     }
   }
